# geos-chem

./: CMakeLists.txt
GeosCore/: CMakeLists.txt  aerosol_mod.F90  aerosol_thermodynamics_mod.F90  carbon_mod.F90  chemistry_mod.F90  cldj_interface_mod.F90  cleanup.F90  drydep_mod.F90  flexchem_mod.F90  fullchem_mod.F90  input_mod.F90  photolysis_mod.F90  planeflight_mod.F90
Headers/: CMN_FJX_MOD.F90  CMN_SIZE_mod.F90  input_opt_mod.F90  phot_container_mod.F90  state_chm_mod.F90  state_diag_mod.F90
Interfaces/GCClassic/: main.F90
Interfaces/GCHP/: Chem_GridCompMod.F90  gchp_chunk_mod.F90
Interfaces/GEOS/: CMakeLists.txt  Includes_After_Run.H  geos_analysis.F90
KPP/fullchem/: gckpp_HetRates.F90
run/CESM/: geoschem_config.yml
run/GCClassic/geoschem_config.yml.templates/: geoschem_config.yml.fullchem
run/GCHP/HISTORY.rc.templates/: HISTORY.rc.fullchem
run/GCHP/geoschem_config.yml.templates/: geoschem_config.yml.fullchem
run/GEOS/: GEOSCHEMchem_GridComp.rc  HEMCO_Config.rc  geoschem_config.yml
